--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,16 +1,23 @@
+* {
+    background-color: #1f2937;
+    
+}
+
 .container {
  /*
  max-width: 600px; 
  margin: 2rem auto; 
  font-family: sans-serif;
  */
+color:white;
+
 width:100vw;
 height:100vh;
 display: flex;
 flex-direction: column;
-align-items: center;
+align-items: left;
 justify-content: center;
-
+background-color: #1f2937;
 }
 
 .movies-container{
@@ -23,4 +30,16 @@ justify-content: center;
 
 .movie_img{
     border-radius: 1rem;
+}
+
+.movie_img:hover {
+  transform: scale(1.05);
+  border-color: #facc15;
+  border-radius: 1rem;
+  box-shadow: 0 0 15px rgba(250, 204, 21, 0.4);
+  cursor: pointer;
+}
+
+.scrollbox{
+    scrollbar-width: thin;
 }
