Hakutuloksista elokuvaa klikkaamalla paasee elokuvan sivulle. Ryhmasivun ja arvostelusivun linkit lisatty ylapalkkiin (sivuilla ei viela ole mitaan)

--- a/frontend/src/pages/MoviePage.css
+++ b/frontend/src/pages/MoviePage.css
@@ -2,7 +2,7 @@
     padding: 40px;
     max-width: 1200px;
     margin: auto;
-    color: black !important;
+    color: rgb(255, 93, 0) !important;
     font-family: Arial, sans-serif;
     width: 100vw;
     /* keep this */
