--- a/frontend/src/components/LoginButt.css
+++ b/frontend/src/components/LoginButt.css
@@ -4,8 +4,9 @@
   border: none;
   font-size: 1.8rem;
   cursor: pointer;
-  color: #facc15; 
+  color: #facc15;
   transition: transform 0.2s ease;
+  filter: invert(1);
 }
 
 .user-icon-btn:hover {
