--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,9 @@
-* {
+.app{
     background-color: #1f2937;
-    
 }
 
 .container {
- /*
- max-width: 600px; 
- margin: 2rem auto; 
- font-family: sans-serif;
- */
+ 
 color:white;
 
 width:100vw;
