--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,13 +6,13 @@
  
 color:white;
 
-width:100vw;
+width:100%;
 height:100vh;
 display: flex;
 flex-direction: column;
 align-items: left;
 justify-content: center;
-background-color: #1f2937;
+
 }
 
 .movies-container{
