--- a/frontend/src/pages/MoviePage.css
+++ b/frontend/src/pages/MoviePage.css
@@ -2,14 +2,17 @@
     padding: 40px;
     max-width: 1200px;
     margin: auto;
-    color: rgb(255, 93, 0) !important;
     font-family: Arial, sans-serif;
-    width: 100vw;
+    width: 100%;
+    
     /* keep this */
     display: flex;
     flex-direction: column;
-
-
+    
+    min-height: 100vh;   /* täyttää koko sivun */
+    background-color: #0f1626; /* tumma tausta */
+    color: white;
+   
 }
 
 .movie-header {
@@ -56,7 +59,6 @@
 
 .actor-card {
     text-align: center;
-    color: white;
 }
 
 .actor-card img {
