--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #222;
+    background-color: #081124;
     color: white;
     display: flex;
     align-items: center;
@@ -30,12 +30,12 @@
 .navbar-search input {
     padding: 6px 10px;
     border-radius: 4px;
-    border: 1px solid #444;
+    border: 1px solid #414B63;
 }
 
 .navbar-search button {
     padding: 6px 12px;
-    background-color: #303030;
+    background-color: #414B63;
     border: none;
     border-radius: 4px;
     color: white;
