--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
 body,
 html,
 #root {
-    background-color: #0f1626;
+    background-color: #0A142B;
     margin: 0;
     padding: 0;
     min-height: 100vh;
