--- a/frontend/src/pages/SettingsPage.css
+++ b/frontend/src/pages/SettingsPage.css
@@ -11,7 +11,7 @@
 
 .setting-box{
     flex: 0 0 250px;       
-    background-color: #222;
+    background-color: hsl(222, 55%, 17%);
     padding: 16px;
     border-radius: 8px;
     
@@ -19,7 +19,7 @@
 
 .setting-screen{
     flex: 1;                
-    background-color: #424242;
+    background-color: hsl(222, 55%, 17%);
     padding: 16px;
     border-radius: 8px;
     
