--- a/frontend/src/pages/RyhmaSivu.css
+++ b/frontend/src/pages/RyhmaSivu.css
@@ -97,3 +97,20 @@ textarea:focus {
 #ryhman-nimi-otsikko{
   text-align: center;
 }
+
+#jasenlista-container{
+  margin-left: 5%;
+}
+
+#jasen{
+  margin-top: 2rem;
+  background-color: antiquewhite;
+}
+
+#jasen_nimi{
+  color: crimson;
+}
+
+#jasen_rooli{
+  color: #04AA6D;
+}
