--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,10 +1,16 @@
 .navbar {
-    background-color: #081124;
+    background-color: var(--color-secondary);
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 1rem 2rem;
+    border-radius: 15px;
+
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    backdrop-filter: blur(6px);
 }
 
 .nav-links {
@@ -16,6 +22,7 @@
     color: white;
     text-decoration: none;
     font-size: 1.1rem;
+    border-radius: 15px;
 }
 
 .nav-link:hover {
@@ -25,11 +32,12 @@
 .navbar-search {
     display: flex;
     gap: 10px;
+    border-radius: 15px;
 }
 
 .navbar-search input {
     padding: 6px 10px;
-    border-radius: 4px;
+    border-radius: 15px;
     border: 1px solid #414B63;
 }
 
@@ -40,10 +48,11 @@
     border-radius: 4px;
     color: white;
     cursor: pointer;
+    border-radius: 15px;
 }
 
 .navbar-search button:hover {
-    background-color: #45a049;
+    background-color: var(--color-accent);
 }
 
 h2:hover{
