oikeus-checkit toimii

--- a/frontend/src/pages/RyhmaSivu.css
+++ b/frontend/src/pages/RyhmaSivu.css
@@ -154,3 +154,9 @@ textarea:focus {
   text-align: center;
  margin-top: 400px;
 }
+
+.jasen-napit{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
