--- a/frontend/src/Haku.css
+++ b/frontend/src/Haku.css
@@ -10,7 +10,7 @@
 #items {
   font-size: 1.2rem;
   margin: 2rem;
-  color: var(--text-primary);
+  color: var(--text-light);
 }
 
 
@@ -37,7 +37,7 @@ ul li:hover {
 }
 
 li.selected {
-  color: rgb(47, 255, 0); 
+  color: var(--color-accent); 
   font-weight: bold;
 }
 
@@ -51,5 +51,5 @@ li.selected {
 
 #top {
   padding: 20px;
-  color: var(--text-primary);
+  color: var(--text-light);
 }
