Elokuvia pystyy selaamaan kirjautumattomana. Jos antaa virheellisen salasanan tai tunnuksen, kayttajalle annetaan siita tieto. Asetuksissa salasanat piilotettu. Kayttaja lista tyhjennetaan, kun vaihdetaan ryhmaa niin jasenlistaan ei tulostu ylimaaraisia jasenia. Poista jasen -nappi palautettu. Footeriin lisatty takaisin sivun alkuun -nappi

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -5,3 +5,14 @@ footer {
 footer .row {
   background-color: transparent;
 }
+
+.top-link {
+  color: white;
+  text-decoration: none;
+  font-size: 1.1rem;
+  border-radius: 15px;
+}
+
+.top-link:hover {
+  text-decoration: underline;
+}
